GNOME Bugzilla – Bug 576570
gnome-settings-daemon actions are not translated
Last modified: 2011-02-17 13:01:08 UTC
Using GNOME 2.26 lot of actions are not translated in gnome-keybinding-properties, the strings seems to be in gnome-settings-daemon but this .mo file is not used by the capplet
Any news about this bug? Some of the action names are into other .mo files. For example, all the strings under the "Window management" section are into metacity.mo file, as well as its translations.
I've filling this bug also in Ubuntu (https://bugs.edge.launchpad.net/bugs/381299) because affect to Ubuntu Jaunty (and probably to Karmic) and also Guadalinex distribution (which is based in Ubuntu Jaunty). Seems something was changed in some point for the action listing because this was showing well before. Now I can't find the strings in the .po files from the git HEAD. No for the 2.26 version, but neither for the last revision (7f4f82f1e865d6b19a06163d57fd86846079f212).
Sorry, the Ubuntu bug was dupplicated, the good one (with the info from the different duplicated ones) is: https://bugs.edge.launchpad.net/bugs/359247
I was following the lead of this bug and I found the bug itself is not from the gnome-settings-daemon is from Gconf. Actually it comes from (I think) the change is being doing now for the bug #568845 (http://bugzilla.gnome.org/show_bug.cgi?id=568845). If you check the gconf keys descriptions (with gconf-editor or gconftool-2) you won't get them translated, they will be always in English. This is something didn't happen before that change. I guess we should look at the changes they are making and check if that is really working.
Mass move to new component "Keyboard" where the keyboard shortcuts live in GNOME 3.
This is due to changes in GConf handling. If you're going to use gconf_schema_get_short_desc() (as we were), then you're expected to get the translation by yourself. In the case of the keyboard shortcuts, you'll need to keep around the gettext_package provided by the XML files, and do: desc = gconf_schema_get_short_desc () if (gettext_package) { real_desc = dgettext (gettext_package, desc); } else { real_desc = _(desc); See the patch for GNOME 3 if you want to adapt it for GNOME 2.x. commit 029797928d603739ba592a329d06e2d57d43f418 Author: Bastien Nocera <hadess@hadess.net> Date: Thu Feb 17 12:25:49 2011 +0000 keyboard: Pass gettext domain name for GConf entries commit 73f155eaacd4d486d54680a20a9bfd50f91a79d4 Author: Bastien Nocera <hadess@hadess.net> Date: Thu Feb 17 12:19:38 2011 +0000 keyboard: Pass a gettext package when loading GConf As GConf itself won't be passing us a translated entry by itself. https://bugzilla.gnome.org/show_bug.cgi?id=576570