keyboard: Pass a gettext package when loading GConf

As GConf itself won't be passing us a translated entry by itself.

https://bugzilla.gnome.org/show_bug.cgi?id=576570